<?xml version="1.0"?>
<package format="2">
  <name>imm_motion_predict</name>
  <version>0.0.0</version>
  <description>The imm_motion_predict package</description>
  <maintainer email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</maintainer>
  <author email="chao.shun.cheng.tw@gmail.com">Chao Shun Cheng</author>
  <license>Apache-2.0</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>imm_ukf_pda_track</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
</package>
